feat(prisma-calendar): support icon and text colors
